Experiment design refined

--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -6,6 +6,8 @@
 \usepackage{titlesec}
 \usepackage[hidelinks]{hyperref} % This shit makes "Contens" clickable
 
+\newcommand\tab[1][1cm]{\hspace*{#1}} % Add \tab :D
+
 % START OF MAKING SUBSUBSUB SECTION A THING
 \titleclass{\subsubsubsection}{straight}[\subsection]
 
