--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -12,13 +12,15 @@
 	Date-Added = {2017-05-13 07:49:26 +0000},
 	Date-Modified = {2017-05-13 07:49:59 +0000},
 	Lastchecked = {2017-05-13},
-	Url = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx}}
+	Url = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx},
+	Note = {C++ Rand function}}
 
 @webpage{QtWebpage,
 	Date-Added = {2017-05-11 13:14:29 +0000},
 	Date-Modified = {2017-05-11 13:16:48 +0000},
 	Lastchecked = {2017-05-11},
 	Url = {https://www.qt.io},
+	Note = {QT Graphical interface},
 	Bdsk-Url-1 = {https://www.qt.io}}
 
 @book{TexturingModeling,
@@ -191,8 +193,8 @@
 @online{SpeedTree,
 	Author = {{SpeedTree}},
 	Date = {2017},
-	Title = {SpeedTree},
 	Url = {http://www.speedtree.com},
+	Note = {Procedural tree generation software},
 	Bdsk-Url-1 = {http://www.speedtree.com}}
 
 @online{SpeedTreeMovies,
@@ -244,3 +246,14 @@
 	Publisher = {Prentice Hall},
 	Title = {Windows Graphics Programming Win32 GDI and DirectDraw},
 	Year = {2000}}
+
+@book{ExperimentationInSoftware,
+	author = {{Wohlin, Claes, 1959-
+	Runeson Per 
+	H{\"o}st, Martin 
+	Ohlsson, Magnus C. 
+	Regnell, Bj{\"o}rn 
+	Wesslén, Anders }},
+	title = {Experimentation in software engineering},
+	Year = {2012},
+}
