LaTeX - Wrote new conclusion

--- a/LaTeX/conclusion.tex
+++ b/LaTeX/conclusion.tex
@@ -1,5 +1,6 @@
 \section{Conclusion and future work}
 	\subsection{Conclusion}
+	The conclusion of this work is that Perlin noise can be used to generate cities that are viable in games. The believability depends on what parameters are used when generating a city. However, any city generated with the generation process suggested in this work looks more believable than a city generated at random.
 	
 	\subsection{Future work}
 	This section will describe a number of directions for future work.
